# templates

python3-fastapi/: cookiecutter.json
python3-fastapi/hooks/: post_gen_project.py
python3-fastapi/{{[[ cookiecutter.project_name ]]}}/: pyproject.toml
python3-fastapi/{{[[ cookiecutter.project_name ]]}}/[[ cookiecutter.project_slug ]]/: main.py
python3-flask/: cookiecutter.json
python3-flask/{{[[ cookiecutter.project_name ]]}}/: pyproject.toml
python3-flask/{{[[ cookiecutter.project_name ]]}}/[[ cookiecutter.project_slug ]]/: app.py
