[tool.poetry]
name = "[[ cookiecutter.project_name ]]"
version = "[[ cookiecutter.version ]]"
description = "[[ cookiecutter.short_description ]]"

[tool.poetry.dependencies]
python = "^[[ cookiecutter.python_version ]]"
fastapi = "^[[ cookiecutter.fastapi_version ]]"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
